@@ -3,6 +3,7 @@
 	* gnus-int.el (gnus-backend-trace): Factor out into its own function
 	for reuse.
 	(gnus-open-server): Use it to add more tracing.
+	(gnus-finish-retrieve-group-infos): Add backend tracing.
 
 2012-12-22  Philipp Haselwarter <philipp@haselwarter.org>
 
